--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "sass": "^1.93.2",
